[tool.poetry]
name = "covid19-pyspark"
version = "0.1.0"
description = ""
authors = ["Johanna Uthoff <jouthoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pyspark = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
